Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
/* ... */
#filterMenu .ui-overlaypanel li {
    list-style: none;
    border-top: solid 1px #d8d8d8;
}

#filterMenu .ui-overlaypanel li:hover {
    background: #f0faff;
}

#filterMenu .ui-overlaypanel li a {
    display: inline-block;
    padding: 10px;
    text-decoration: none;
    color: #0071bc;
}

#filterMenu .ui-overlaypanel li > a:first-child {
    width: 75%;
}

#filterMenu .ui-overlaypanel li:first-child a {
    width: 100%;
    box-sizing: border-box;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}

#filterMenu .ui-overlaypanel li .filter-delete {
    float: right;
    vertical-align: middle;
}

.ui-datatable th .ui-column-filter {
    display: none;
}

.ui-tabs-panels {
    overflow-y: scroll;
    background: white;
}

.ui-tabs-panels.autoscroll {
    overflow: hidden;
}

.ui-tabs .ui-tabs-panel > div.mets-file-groups,
.ui-tabs .ui-tabs-panel > div.mets-file-groups > div {
    padding: 0;
}

.ui-tabs-panel thead {
    border-top: 3px solid #999;
}

.mets-file-groups .ui-datatable table {
    border-top: solid 1px #d8d8d8;
}

.mets-file-groups .ui-datatable.ui-widget tr th,
.mets-file-groups .ui-datatable.ui-widget tr td {
    padding: .75em 1.5em;
}

.mets-file-groups .ui-datatable.ui-widget tr th:last-child,
.mets-file-groups .ui-datatable.ui-widget tr td:last-child {
    width: 100px;
    text-align: right;
}

.mets-file-groups .ui-datatable.ui-widget tr th {
    background: transparent;
}

.mets-file-groups > div > button {
    margin: 1.5em;
}

main i.fa {
    font-size: 20px;
}

.login-form {
    margin: auto;
    display: block;
    width: 100px;
}

.login-box {
    height: 70vh;
}

#editForm\:tabs\:taskTable\:taskOrder {
    width: 90px;
}

#editForm .button-filled-green {
    margin: 16px;
}

.statusColumn,
.statusColumn div,
.statusColumn .ui-panel-content {
    padding: 0;
    vertical-align: middle;
}

.statusColumn img {
    display: inline-block;
    vertical-align: middle;
    margin: 10px;
}

.statusColumn .ui-panel-content .ui-panel {
    display: inline-block;
}

#login-section {
    background: #fff;
    border-radius: 3px;
    padding: 32px 32px 0 32px;
    -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
    -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
    box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.2);
    max-width: 560px;
    margin: 0 auto;
}

#login-section h3 {
    font-size: 22px;
    margin-bottom: 1.3em;
}

#login-section input[id=username], #login-section input[type=password] {
    border: 1px solid #0071bc;
    border-radius: 3px;
    padding: 10px;
    line-height: 0px;
    font-size: 16px;
    color: #0071bc;
    display: block;
    width: 100%;
}

#login-section input[type=text]:hover {
    border: 1px solid #005182;
    color: #005182;
}

#login-section div {
    margin-bottom: 1.3em;
}

#login-section button {
    background: #0071bc;
    border-radius: 3px;
    border: 1px solid #0071bc;
    color: #fff;
    padding: 10px;
}

#login-section button .button-text {
    font-size: 16px;
    font-weight: 600;
}

#login-section button .ui-icon {
    padding-left: 10px;
    font-size: 16px;
    display: inline;
}

#login-section button:hover {
    background: #005182;
    border: 1px solid #005182;
    cursor: pointer;
}

.login-note {
    background: #999;
    margin: 32px -32px 0 -32px;
    padding: 32px;
    color: #d8d8d8;
    hyphens: auto;
    line-height: 22px;
}

.select-client-note {
    background: #F94A15;
    padding: 16px 32px 16px 32px;
    color: #ffffff;
    hyphens: auto;
    line-height: 22px;
}

.client-select-dialog {
    background: #f3f3f3;
}

.client-select-dialog > .ui-dialog-titlebar > .ui-dialog-title {
    color: #000000;
    font-size: 150%;
    margin-top: 25px;
    line-height: 150%;
}

.client-select-dialog > .ui-dialog-content {
    padding-left: 0;
    padding-right: 0;
}

.client-select-dialog > .ui-dialog-content > #select-session-client-form > .select-client-selector {
    padding: 16px 32px 16px 32px;
}

#select-session-client-form > .select-client-selector > .ui-selectonemenu {
    margin-top: 8px;
    width: 100%;
    box-sizing: border-box;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid {
    margin-top: 20px;
    width: 100%;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even {
    background: transparent;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even > .ui-panelgrid-cell {
    padding: 0;
}

.client-select-dialog > .ui-widget-header {
    padding-left: 32px;
    background: transparent;
}

/*----------------------------------------------------------------------
Metadata Editor
----------------------------------------------------------------------*/

#metadataEditorWrapper {
    height: 700px;
}

.collapsibleWrapper {
    display: inline-block;
    height: 100%;
    box-sizing: border-box;
    vertical-align: top;
    position: relative;
    padding: 60px 0 0 0;
    background: #d8d8d8;
}

.collapsibleWrapper > button {
    position: absolute;
    top: -10px;
    left: 8px;
    background: #0071bc;
    color: #fff;
    border: solid 1px #fff;
}

.collapsibleWrapper.collapsed .columnExpandButton {
    transform: scaleX(-1);
}

.collapsibleWrapper .columnHeading {
    position: absolute;
    top: 30px;
    left: 10px;
    font-weight: bold;
}

.collapsibleWrapper.collapsed .columnHeading {
    transform: rotate(90deg);
    top: -10px;
    left: 0px;
    width: 200px;
    height: 42px;
    line-height: 42px;
    z-index: 10;
    transform-origin: 0 100%;
}

.collapsibleWrapper > .ui-panel, .collapsibleWrapper > .ui-panel > .ui-panel-content {
    background: transparent;
    padding: 0;
    height: 100%;
}

#structureTreeForm {
    height: 100%;
}

#structureTreeForm\:structurePanel {
    overflow-y: scroll;
    height: 50%;
    box-sizing: border-box;
}
/* ... */

